...

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/uname"
        app:layout_constraintTop_toBottomOf="@id/accountdetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:inputType="text"
...
